--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "sass": "^1.93.3",
     "scss-reset": "^1.4.6",
     "vite": "^7.1.7"
   }
