--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
+    "cssnano": "^7.1.2",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
@@ -32,5 +33,12 @@
     "sass": "^1.93.3",
     "scss-reset": "^1.4.6",
     "vite": "^7.1.7"
-  }
+  },
+  "browserslist": [
+    "defaults and not op_mini all",
+    ">0.5%",
+    "last 2 versions",
+    "Firefox ESR",
+    "not dead"
+  ]
 }
